# poetry-mcp

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_CHECKLIST.md  Makefile  README.md  TEST_STATUS.md  config.yaml.example  coverage.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: architecture_patterns.md  project_overview.md  tool_inventory.md
.specify/templates/: spec-template.md
claudedocs/: tool_architecture_audit.md
docs/: ARCHITECTURE.md  FRONTMATTER_SCHEMA.md  bug-fix-sync-submissions-2026-01-30.md
scripts/: add_poem_frontmatter.py  benchmark.py  fix_pydantic_v2.py
specs/1-v1-stabilization/: plan.md  research.md  spec.md  tasks.md
specs/2-chain-tools/: spec.md
specs/3-v2-advanced-discovery/: spec.md
src/poetry_mcp/: __init__.py  config.py  errors.py  server.py  utils.py
templates/: README.md
tests/: __init__.py  conftest.py  test_catalog.py  test_chain_tools.py  test_config.py  test_delete_nexus_cleanup.py  test_enrichment.py  test_enrichment_tools.py  test_enrichment_tools_errors.py  test_frontmatter_parser_edge_cases.py  test_frontmatter_writer.py  test_frontmatter_writer_errors.py  test_models.py  test_nexus_manager.py  test_nexus_parser.py  test_nexus_writer.py  test_quality_scoring.py  test_server_startup.py  test_server_tools.py  test_similarity.py  test_slugify.py  test_startup_validation.py  test_submission_catalog_api.py  test_sync_submissions.py  test_validate_poem_tags.py  test_venue_parser.py  test_venue_parser_edge_cases.py  test_venue_writer.py
(+54 files in other folders)
