[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poetry-mcp"
version = "0.1.0"
description = "MCP server for poetry catalog and nexus management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

# Dev tooling lives in a dependency group (PEP 735) so `uv sync` / `uv run`
# install it into the project venv by default. As a plain optional-extra it was
# not installed, so `uv run pytest` fell back to an unrelated system interpreter.
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
poetry-mcp = "poetry_mcp.server:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=poetry_mcp --cov-report=term-missing"
